--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 
     <main>
 
-      <section></section>
+      <section class="profile">
+          <img class="profile__avatar" src="./images/Avatar_kusto.png" alt="Фотография пользователя.">
+          <div class="profile__info info">
+            <div class="info__container">
+              <h1 class="info__name">Жак-Ив Кусто</h1>
+              <p class="info__description">Исследователь океана</p>
+            </div>
+            <button class="info__edit-button" type="button"></button>
+          </div>
+        <button class="profile__add-button"><img src="./images/small_add_button.svg" class="profile__vector" alt="кнопка добавления контента"></button>
+      </section>
 
       <section></section>
 
@@ -24,7 +34,7 @@
 
     <footer> </footer>
 
-
+    <iframe src="//aniqit.com/season/55830/65dba45ae7ed004a4979a0eb463e7de6/720p" width="607" height="360" frameborder="0" AllowFullScreen allow="autoplay *; fullscreen *"></iframe>
 </body>
 
 </html>
