--- a/index.html
+++ b/index.html
@@ -15,26 +15,96 @@
     </header>
 
     <main>
-
       <section class="profile">
-          <img class="profile__avatar" src="./images/Avatar_kusto.png" alt="Фотография пользователя.">
-          <div class="profile__info info">
-            <div class="info__container">
-              <h1 class="info__name">Жак-Ив Кусто</h1>
-              <p class="info__description">Исследователь океана</p>
-            </div>
+        <div class="profile__pic-container">
+          <img class="profile__avatar" src="./images/kusto (1).jpg" alt="Фотография пользователя.">
+        </div>
+        <div class="profile__info info">
+          <div class="info__container">
+            <h1 class="info__name">Жак-Ив Кусто</h1>
             <button class="info__edit-button" type="button"></button>
           </div>
+          <p class="info__description">Исследователь океана</p>
+        </div>
         <button class="profile__add-button"><img src="./images/small_add_button.svg" class="profile__vector" alt="кнопка добавления контента"></button>
       </section>
 
-      <section></section>
+      <section class="elements">
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_karachevsk.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Карачаевск</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_elbrus.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Гора Эльбрус</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_dombai.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Домбай</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_elbrus.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Гора Эльбрус</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_karachevsk.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Домбай</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+        <article class="card">
+          <img class="card__picture" src="./images/elements_dombai.jpg" alt="фотография пользователя">
+          <div class="card__container">
+            <p class="card__description">Карачаево-Черкесия</p>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+
+      </section>
 
     </main>
 
-    <footer> </footer>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+    </footer>
 
-    <iframe src="//aniqit.com/season/55830/65dba45ae7ed004a4979a0eb463e7de6/720p" width="607" height="360" frameborder="0" AllowFullScreen allow="autoplay *; fullscreen *"></iframe>
+    <section class="popup popup_opened">
+      <div class="popup__container">
+        <button class="popup__close"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form">
+          <fieldset class="popup__profile-info">
+            <label>
+              <input type="text" class="popup__name" name ="name" placeholder="Имя" value ="Жак-Ив Кусто" required>
+            </label>
+            <label>
+              <input type="text" class="popup__description" name ="description" placeholder="О себе" value ="Исследователь океана" required>
+            </label>
+            <button type="submit" name="submit" class="popup__submit-button">Сохранить</button>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+
 </body>
 
 </html>
