--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__pic-container">
           <img class="profile__avatar" src="./images/kusto (1).jpg" alt="Фотография пользователя.">
         </div>
-        <div class="profile__info info">
+        <div class="info">
           <div class="info__container">
             <h1 class="info__name">Жак-Ив Кусто</h1>
             <button class="info__edit-button" type="button"></button>
@@ -87,7 +87,7 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
 
-    <section class="popup popup_opened">
+    <section class="popup">
       <div class="popup__container">
         <button class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -104,6 +104,8 @@
         </form>
       </div>
     </section>
+
+<script src="./scripts/index.js"></script>
 
 </body>
 
