--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="form">
             <label class="popup__profile-info">
-              <input type="text" id = "name" class="popup__name" name ="name" placeholder="Имя" value ="иван" required>
+              <input type="text" id = "name" class="popup__name" name ="name" placeholder="Имя" value ="Жак-Ив Кусто" required>
             </label>
             <label class="popup__profile-info">
               <input type="text" id = "description" class="popup__description" name ="description" placeholder="О себе" value ="Исследователь океана" required>
