--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section class="profile">
         <div class="profile__pic-container">
-          <img class="profile__avatar" src="./images/kusto (1).jpg" alt="Фотография пользователя.">
+          <img class="profile__avatar" src="./images/kusto.jpg" alt="Фотография пользователя.">
         </div>
         <div class="info">
           <div class="info__container">
