--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
 
       <section class="elements">
-
+<!--
         <article class="card">
           <img class="card__picture" src="./images/elements_karachevsk.jpg" alt="фотография пользователя">
           <div class="card__container">
@@ -76,7 +76,7 @@
             <button class="card__like" type="button"></button>
           </div>
         </article>
-
+-->
       </section>
 
     </main>
@@ -85,21 +85,59 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
+    <div class="popup popup_edit-profile">
       <div class="popup__container">
-        <button class="popup__close" type="button"></button>
+        <button class="popup__close popup__close_edit-profile" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="form">
+        <form class="popup__form popup__form_edit-profile" name="form">
           <label class="popup__profile-info">
-            <input type="text" id = "name" class="popup__input" name ="name" placeholder="Имя" value ="" required>
+            <input type="text" id = "name" class="popup__input popup__input_edit_name" name ="name" placeholder="Имя" value ="" required>
           </label>
           <label class="popup__profile-info">
-            <input type="text" id = "description" class = "popup__input" name = "description" placeholder="О себе" value ="" required>
+            <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "description" placeholder="О себе" value ="" required>
           </label>
           <button type="submit" name="submit" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
     </div>
+
+      <div class="popup popup_new-place">
+        <div class="popup__container">
+          <button class="popup__close popup__close_new-place" type="button"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__form popup__form_new-place" name="form">
+            <label class="popup__profile-info">
+              <input type="text" id = "name" class="popup__input popup__input_place_name" name ="name" placeholder="Название" value ="" required>
+            </label>
+            <label class="popup__profile-info">
+              <input type="text" id = "description" class = "popup__input popup__input_place_link" name = "description" placeholder="Ссылка на картинку" value ="" required>
+            </label>
+            <button type="submit" name="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
+          </form>
+        </div>
+      </div>
+
+
+      <div class="popup popup_open-picture">
+        <div class="popup__picture-container">
+          <figure class="popup__figure">
+            <img src="./images/elements_karachevsk.jpg" class="popup__picture" alt="">
+            <figcaption class="popup__description">карачевск</figcaption>
+          </figure>
+          <button type="button" class="popup__close popup__close-button_open-picture"></button>
+        </div>
+      </div>
+
+      <template id="place-template">
+        <article class="card">
+          <img class="card__picture" src="" alt="фотография пользователя">
+          <button class="card__delete-button"></button>
+          <div class="card__container">
+            <h2 class="card__description"></h2>
+            <button class="card__like" type="button"></button>
+          </div>
+        </article>
+      </template>
 
 <script src="./scripts/index.js"></script>
 
