--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
       <template id="place-template">
         <article class="card">
-          <img class="card__picture" src="" alt="фотография пользователя">
+          <img class="card__picture" src="" alt="">
           <button class="card__delete-button"></button>
           <div class="card__container">
-            <h2 class="card__description"></h2>
+            <h2 class="card__description">о</h2>
             <button class="card__like" type="button"></button>
           </div>
         </article>
