--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <img class="card__picture" src="" alt="">
           <button class="card__delete-button"></button>
           <div class="card__container">
-            <h2 class="card__description">о</h2>
+            <h2 class="card__description"></h2>
             <button class="card__like" type="button"></button>
           </div>
         </article>
