--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__form popup__form_new-place" name="form">
             <label class="popup__profile-info">
-              <input type="text" id = "name" class="popup__input popup__input_place_name" placeholder="Название" value ="" required>
+              <input type="text" class="popup__input popup__input_place_name" placeholder="Название" value ="" required>
             </label>
             <label class="popup__profile-info">
-              <input type="text" id = "description" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
+              <input type="text" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
             </label>
             <button type="submit" name="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
           </form>
