исправить ошибки после первого ревью

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup_edit-profile">
+    <section class="popup popup_edit-profile">
       <div class="popup__container">
         <button class="popup__close popup__close_edit-profile" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -50,9 +50,9 @@
           <button type="submit" name="submit" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
-    </div>
+    </section>
 
-      <div class="popup popup_new-place">
+      <section class="popup popup_new-place">
         <div class="popup__container">
           <button class="popup__close popup__close_new-place" type="button"></button>
           <h2 class="popup__title">Новое место</h2>
@@ -66,10 +66,10 @@
             <button type="submit" name="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
           </form>
         </div>
-      </div>
+      </section>
 
 
-      <div class="popup popup_open-picture">
+      <section class="popup popup_open-picture">
         <div class="popup__picture-container">
           <figure class="popup__figure">
             <img src="./images/elements_karachevsk.jpg" class="popup__picture" alt="">
@@ -77,7 +77,7 @@
           </figure>
           <button type="button" class="popup__close popup__close_open-picture"></button>
         </div>
-      </div>
+      </section>
 
       <template id="place-template">
         <article class="card">
