--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
       <div class="popup__container">
         <button class="popup__close popup__close_edit-profile" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form popup__form_edit-profile" name="form">
+        <form class="popup__form popup__form_edit-profile" name="form" novalidate>
           <label class="popup__profile-info">
-            <input type="text" id = "name" class="popup__input popup__input_edit_name" name ="name" placeholder="Имя" value ="" required>
+            <input type="text" id="username" class="popup__input popup__input_edit_name" name ="name" placeholder="Имя" value ="" minlength="2" maxlength="40" required>
+            <span class="username-error popup__error" id=""></span>
           </label>
           <label class="popup__profile-info">
-            <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "description" placeholder="О себе" value ="" required>
+            <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "description" placeholder="О себе" value ="" minlength="2" maxlength="200" required>
+            <span class="description-error popup__error" id=""></span>
           </label>
           <button type="submit" name="submit" class="popup__submit-button">Сохранить</button>
         </form>
@@ -56,12 +58,14 @@
         <div class="popup__container">
           <button class="popup__close popup__close_new-place" type="button"></button>
           <h2 class="popup__title">Новое место</h2>
-          <form class="popup__form popup__form_new-place" name="form">
+          <form class="popup__form popup__form_new-place" name="form" novalidate>
             <label class="popup__profile-info">
-              <input type="text" class="popup__input popup__input_place_name" placeholder="Название" value ="" required>
+              <input id = 'place' type="text" class="popup__input popup__input_place_name" placeholder="Название" value ="" minlength="2" maxlength="30" required>
+              <span class="place-error popup__error" id=""></span>
             </label>
             <label class="popup__profile-info">
-              <input type="text" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
+              <input type="url" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
+              <span class="link-error popup__error" id=""></span>
             </label>
             <button type="submit" name="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
           </form>
