функциональность закрытия модального окна по клику на оверлей и esc+ валидация

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "description" placeholder="О себе" value ="" minlength="2" maxlength="200" required>
             <span class="description-error popup__error" id=""></span>
           </label>
-          <button type="submit" name="submit" class="popup__submit-button">Сохранить</button>
+          <button type="submit" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
     </section>
@@ -67,7 +67,7 @@
               <input type="url" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
               <span class="link-error popup__error" id=""></span>
             </label>
-            <button type="submit" name="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
+            <button type="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
           </form>
         </div>
       </section>
@@ -95,6 +95,7 @@
       </template>
 
 <script src="./scripts/index.js"></script>
+<script src="./scripts/validate.js"></script>
 
 </body>
 
