--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
         </article>
       </template>
 
-<script src="./scripts/index.js"></script>
-<script src="./scripts/validate.js"></script>
+<script type ="module" src="./scripts/index.js"></script>
 
 </body>
 
