--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__form popup__form_new-place" name="form" novalidate>
             <label class="popup__profile-info">
-              <input id = 'place' type="text" class="popup__input popup__input_place_name" placeholder="Название" value ="" minlength="2" maxlength="30" required>
+              <input id = 'place' name = "place" type="text" class="popup__input popup__input_place_name" placeholder="Название" value ="" minlength="2" maxlength="30" required>
               <span class="place-error popup__error" id=""></span>
             </label>
             <label class="popup__profile-info">
-              <input type="url" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
+              <input type="url" name = "link" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
               <span class="link-error popup__error" id=""></span>
             </label>
             <button type="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
