--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
+
   <title>Место</title>
 </head>
 
 <body class="page">
 
     <header class="header">
-      <img class="header__logo" src="./images/logo_header.svg" alt="логотип проекта 'Меcто'.">
+      <img class="header__logo" src="<%= require('./images/logo_header.svg')%>" alt="логотип проекта 'Меcто'.">
     </header>
 
     <main>
       <section class="profile">
-        <img class="profile__avatar" src="./images/kusto.jpg" alt="Фотография пользователя.">
+        <img class="profile__avatar" src="<%= require('./images/kusto.jpg')%>" alt="Фотография пользователя.">
         <div class="profile__info">
           <div class="profile__container">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -24,7 +24,7 @@
           </div>
           <p class="profile__description">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button"><img src="./images/small_add_button.svg" class="profile__vector" alt="кнопка добавления контента"></button>
+        <button class="profile__add-button" type="button"><img src="<%= require('./images/small_add_button.svg')%>" class="profile__vector" alt="кнопка добавления контента"></button>
       </section>
 
       <section class="elements">
@@ -76,7 +76,7 @@
       <section class="popup popup_open-picture">
         <div class="popup__picture-container">
           <figure class="popup__figure">
-            <img src="./images/elements_karachevsk.jpg" class="popup__picture" alt="">
+            <img src="<%= require('./images/elements_karachevsk.jpg')%>" class="popup__picture" alt="">
             <figcaption class="popup__description">карачевск</figcaption>
           </figure>
           <button type="button" class="popup__close popup__close_open-picture"></button>
@@ -85,7 +85,7 @@
 
       <template id="place-template">
         <article class="card">
-          <img class="card__picture" src="./images/elements_karachevsk.jpg" alt="">
+          <img class="card__picture" src="<%= require('./images/elements_karachevsk.jpg')%>" alt="">
           <button class="card__delete-button"></button>
           <div class="card__container">
             <h2 class="card__description"></h2>
@@ -94,7 +94,7 @@
         </article>
       </template>
 
-<script type ="module" src="./pages/index.js"></script>
+
 
 </body>
 
