--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
         <img class="profile__avatar" src="<%= require('./images/kusto.jpg')%>" alt="Фотография пользователя.">
         <div class="profile__info">
           <div class="profile__container">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button class="profile__edit-button" type="button"></button>
           </div>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description"></p>
         </div>
         <button class="profile__add-button" type="button"><img src="<%= require('./images/small_add_button.svg')%>" class="profile__vector" alt="кнопка добавления контента"></button>
       </section>
@@ -46,7 +46,7 @@
             <span class="username-error popup__error" id=""></span>
           </label>
           <label class="popup__profile-info">
-            <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "description" placeholder="О себе" value ="" minlength="2" maxlength="200" required>
+            <input type="text" id = "description" class = "popup__input popup__input_edit_description" name = "about" placeholder="О себе" value ="" minlength="2" maxlength="200" required>
             <span class="description-error popup__error" id=""></span>
           </label>
           <button type="submit" class="popup__submit-button">Сохранить</button>
@@ -72,6 +72,16 @@
         </div>
       </section>
 
+      <section class="popup popup_delete">
+        <div class="popup__container">
+          <button class="popup__close popup__close_new-place" type="button"></button>
+          <h2 class="popup__title">Вы уверены?</h2>
+          <form class="popup__form popup__form_new-place" name="form" novalidate></form>
+          <button type="submit" class="popup__submit-button popup__submit-button_place">Да</button>
+        </form>
+        </div>
+      </section>
+
 
       <section class="popup popup_open-picture">
         <div class="popup__picture-container">
@@ -90,6 +100,7 @@
           <div class="card__container">
             <h2 class="card__description"></h2>
             <button class="card__like" type="button"></button>
+            <span class="card__like-count"></span>
           </div>
         </article>
       </template>
