--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 
     <main>
       <section class="profile">
-        <img class="profile__avatar" src="<%= require('./images/kusto.jpg')%>" alt="Фотография пользователя.">
+        <button class="profile__avatar-container">
+          <img class="profile__avatar" src="" alt="Фотография пользователя.">
+        </button>
         <div class="profile__info">
           <div class="profile__container">
             <h1 class="profile__name"></h1>
@@ -79,6 +81,20 @@
           <form class="popup__form popup__form_new-place" name="form" novalidate></form>
           <button type="submit" class="popup__submit-button popup__submit-button_place">Да</button>
         </form>
+        </div>
+      </section>
+
+      <section class="popup popup_change-avatar">
+        <div class="popup__container">
+          <button class="popup__close popup__close_new-place" type="button"></button>
+          <h2 class="popup__title">Обновить аватар</h2>
+          <form class="popup__form popup__form_new-place" name="form" novalidate>
+            <label class="popup__profile-info">
+              <input type="url" name = "avatar" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
+              <span class="link-error popup__error" id=""></span>
+            </label>
+            <button type="submit" class="popup__submit-button popup__submit-button_place">Сохранить</button>
+          </form>
         </div>
       </section>
 
