--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
               <input type="url" name = "link" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
               <span class="link-error popup__error" id=""></span>
             </label>
-            <button type="submit" class="popup__submit-button popup__submit-button_place">Создать</button>
+            <button type="submit" class="popup__submit-button popup__submit-button_place">Сохранить</button>
           </form>
         </div>
       </section>
@@ -88,7 +88,7 @@
         <div class="popup__container">
           <button class="popup__close popup__close_new-place" type="button"></button>
           <h2 class="popup__title">Обновить аватар</h2>
-          <form class="popup__form popup__form_new-place" name="form" novalidate>
+          <form class="popup__form popup__form_avatar" name="form" novalidate>
             <label class="popup__profile-info">
               <input type="url" name = "avatar" id = "link" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
               <span class="link-error popup__error" id=""></span>
