--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,9 @@
       <section class="popup popup_delete">
         <div class="popup__container">
           <button class="popup__close popup__close_new-place" type="button"></button>
-          <h2 class="popup__title">Вы уверены?</h2>
+          <h2 class="popup__title popup__title_delete">Вы уверены?</h2>
           <form class="popup__form popup__form_new-place" name="form" novalidate></form>
-          <button type="submit" class="popup__submit-button popup__submit-button_place">Да</button>
+          <button type="submit" class="popup__submit-button popup__submit-button_delete">Да</button>
         </form>
         </div>
       </section>
@@ -115,8 +115,10 @@
           <button class="card__delete-button"></button>
           <div class="card__container">
             <h2 class="card__description"></h2>
-            <button class="card__like" type="button"></button>
-            <span class="card__like-count"></span>
+            <div class='card__like-container'>
+              <button class="card__like" type="button"></button>
+              <span class="card__like-count"></span>
+            </div>
           </div>
         </article>
       </template>
