--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,8 @@
           <h2 class="popup__title">Обновить аватар</h2>
           <form class="popup__form popup__form_avatar" name="form" novalidate>
             <label class="popup__profile-info">
-              <input type="url" name = "avatar" id = "avatar" class = "popup__input popup__input_place_link" placeholder="Ссылка на картинку" value ="" required>
-              <span class="link-error popup__error" id=""></span>
+              <input type="url" name = "avatar" id = "avatar" class = "popup__input popup__input_avatar" placeholder="Ссылка на картинку" value ="" required>
+              <span class="avatar-error popup__error" id=""></span>
             </label>
             <button type="submit" class="popup__submit-button popup__submit-button_place">Сохранить</button>
           </form>
